--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 
 }
